<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/fragmentFullForecast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activity.FullForecastActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/appbarlayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/temp28"
            android:textSize="90sp"
            android:textColor="@color/primary_text"
            android:id="@+id/now_temperature_full" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:text="@string/static_string_city"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_date"
            android:textColor="@color/secondary_text"
            android:id="@+id/now_data_full" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/morning_thursday"
            android:layout_margin="@dimen/textview_margin"
            android:id="@+id/tod_weekday"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_without_cloudiness"
            android:id="@+id/cloudiness"
            android:layout_marginBottom="@dimen/textview_margin"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/cardview_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pressure"
            android:layout_marginBottom="@dimen/textview_margin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/pressure" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wind"
            android:layout_marginBottom="@dimen/textview_margin"
            android:text="@string/wind"
            android:layout_below="@+id/pressure"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relwet"
            android:layout_marginBottom="@dimen/textview_margin"
            android:text="@string/relwet"
            android:layout_below="@+id/wind"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heat"
            android:layout_marginBottom="@dimen/textview_margin"
            android:text="@string/heat"
            android:layout_below="@+id/relwet"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>
